--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <nav class="navigation">
         <a href="" class="logo link"
           ><span class="logo-web">WEB</span
@@ -47,7 +47,7 @@
         </ul>
       </address>
     </header>
-    <main>
+    <main class="container">
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
@@ -163,7 +163,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
       <a class="logo link" href="">
         <span class="logo-web">WEB</span
         ><span class="logo-studio-footer">STUDIO</span></a
