third home work

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,164 +15,171 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navigation">
-        <a href="" class="logo link"
-          ><span class="logo-web">WEB</span
-          ><span class="logo-studio">STUDIO</span></a
-        >
-        <ul class="navigation-list list">
-          <li>
-            <a class="navigation-link link" href="./index.html"> Studio</a>
-          </li>
-          <li>
-            <a class="navigation-link link" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li><a class="navigation-link link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="contacts list">
-          <li class="contacts-item">
-            <a class="contacts-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link link" href="tel:+110001111111"
-              >+110001111111</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container navigation-container">
+        <nav class="navigation">
+          <a href="" class="logo link"
+            ><span class="logo-web">WEB</span
+            ><span class="logo-studio">STUDIO</span></a
+          >
+          <ul class="navigation-list list">
+            <li>
+              <a class="navigation-link link" href="./index.html"> Studio</a>
+            </li>
+            <li>
+              <a class="navigation-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li><a class="navigation-link link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="contacts list">
+            <li class="contacts-item">
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+110001111111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section>
-        <h1 hidden>Our Works</h1>
-        <ul class="button-list list">
-          <li class="button-item">
-            <button type="button" class="button-icon">ALL</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button-icon">Web Site</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button-icon">App</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button-icon">Design</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button-icon">Marketing</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 hidden>Our Works</h1>
+          <ul class="button-list list">
+            <li class="button-item">
+              <button type="button" class="button-icon">ALL</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-icon">Web Site</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-icon">App</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-icon">Design</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-icon">Marketing</button>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <ul class="cards-list list">
+            <li class="cards-item">
+              <img
+                src="./images/bankingapp.jpg"
+                alt="photo of the application "
+                width="360"
+                height="300"
+              />
 
-        <ul class="cards-list list">
-          <li class="cards-item">
-            <img
-              src="./images/bankingapp.jpg"
-              alt="photo of the application "
-              width="360"
-              height="300"
-            />
+              <h3 class="cards-name">Banking App Interface Concept</h3>
+              <p class="cards-text">App</p>
+            </li>
+            <li class="cards-item">
+              <img
+                src="./images/cashlesspayment.jpg"
+                alt="Photo of the employee"
+                width="360"
+                height="300"
+              />
 
-            <h3 class="cards-name">Banking App Interface Concept</h3>
-            <p class="cards-text">App</p>
-          </li>
-          <li class="cards-item">
-            <img
-              src="./images/cashlesspayment.jpg"
-              alt="Photo of the employee"
-              width="360"
-              height="300"
-            />
-
-            <h3 class="cards-name">Cashless Payment</h3>
-            <p class="cards-text">Marketing</p>
-          </li>
-          <li class="cards-item">
-            <img
-              src="./images/meditationapp.jpg"
-              alt="Photo of the application"
-              width="360"
-              height="300"
-            />
-            <h3 class="cards-name">Mediation App</h3>
-            <p class="cards-text">App</p>
-          </li>
-          <li class="cards-item">
-            <img
-              src="./images/taxisevice.jpg"
-              alt="Photo of the employee"
-              width="360"
-              height="300"
-            />
-            <h3 class="cards-name">Taxi Service</h3>
-            <p class="cards-text">Marketing</p>
-          </li>
-          <li class="cards-item">
-            <img
-              src="./images/screenillustrations.jpg"
-              alt="Photo of the employee"
-              width="360"
-              height="300"
-            />
-            <h3 class="cards-name">Screen Illustrations</h3>
-            <p class="cards-text">Desing</p>
-          </li>
-          <li class="cards-item">
-            <img
-              src="./images/onlinecourses.jpg"
-              alt="Photo of the employee"
-              width="360"
-              height="300"
-            />
-            <h3 class="cards-name">Online Courses</h3>
-            <p class="cards-text">Marketing</p>
-          </li>
-          <li class="cards-item">
-            <img
-              src="./images/instagramstories.jpg"
-              alt="Photo of the employee"
-              width="360"
-              height="300"
-            />
-            <h3 class="cards-name">Instagram Stories Concept</h3>
-            <p class="cards-text">Desing</p>
-          </li>
-          <li class="cards-item">
-            <img
-              src="./images/organicfood.jpg"
-              alt="Photo of the employee"
-              width="360"
-              height="300"
-            />
-            <h3 class="cards-name">Orgainc Food</h3>
-            <p class="cards-text">Web Site</p>
-          </li>
-          <li class="cards-item">
-            <img
-              src="./images/freshcoffee.jpg"
-              alt="Photo of the employee"
-              width="360"
-              height="300"
-            />
-            <h3 class="cards-name">Fresh Coffee</h3>
-            <p class="cards-text">Web Site</p>
-          </li>
-        </ul>
+              <h3 class="cards-name">Cashless Payment</h3>
+              <p class="cards-text">Marketing</p>
+            </li>
+            <li class="cards-item">
+              <img
+                src="./images/meditationapp.jpg"
+                alt="Photo of the application"
+                width="360"
+                height="300"
+              />
+              <h3 class="cards-name">Mediation App</h3>
+              <p class="cards-text">App</p>
+            </li>
+            <li class="cards-item">
+              <img
+                src="./images/taxisevice.jpg"
+                alt="Photo of the employee"
+                width="360"
+                height="300"
+              />
+              <h3 class="cards-name">Taxi Service</h3>
+              <p class="cards-text">Marketing</p>
+            </li>
+            <li class="cards-item">
+              <img
+                src="./images/screenillustrations.jpg"
+                alt="Photo of the employee"
+                width="360"
+                height="300"
+              />
+              <h3 class="cards-name">Screen Illustrations</h3>
+              <p class="cards-text">Desing</p>
+            </li>
+            <li class="cards-item">
+              <img
+                src="./images/onlinecourses.jpg"
+                alt="Photo of the employee"
+                width="360"
+                height="300"
+              />
+              <h3 class="cards-name">Online Courses</h3>
+              <p class="cards-text">Marketing</p>
+            </li>
+            <li class="cards-item">
+              <img
+                src="./images/instagramstories.jpg"
+                alt="Photo of the employee"
+                width="360"
+                height="300"
+              />
+              <h3 class="cards-name">Instagram Stories Concept</h3>
+              <p class="cards-text">Desing</p>
+            </li>
+            <li class="cards-item">
+              <img
+                src="./images/organicfood.jpg"
+                alt="Photo of the employee"
+                width="360"
+                height="300"
+              />
+              <h3 class="cards-name">Orgainc Food</h3>
+              <p class="cards-text">Web Site</p>
+            </li>
+            <li class="cards-item">
+              <img
+                src="./images/freshcoffee.jpg"
+                alt="Photo of the employee"
+                width="360"
+                height="300"
+              />
+              <h3 class="cards-name">Fresh Coffee</h3>
+              <p class="cards-text">Web Site</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="">
-        <span class="logo-web">WEB</span
-        ><span class="logo-studio-footer">STUDIO</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions
-      </p>
+      <div class="container">
+        <a class="logo link" href="">
+          <span class="logo-web">WEB</span
+          ><span class="logo-studio-footer">STUDIO</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions
+        </p>
+      </div>
     </footer>
   </body>
 </html>
