--- a/index.html
+++ b/index.html
@@ -14,164 +14,177 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header container">
-      <nav class="navigation">
-        <a href="" class="logo link"
-          ><span class="logo-web">WEB</span
-          ><span class="logo-studio">STUDIO</span></a
-        >
-        <ul class="navigation-list list">
-          <li>
-            <a class="navigation-link link" href="./index.html"> Studio</a>
-          </li>
-          <li>
-            <a class="navigation-link link" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li><a class="navigation-link link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="contacts list">
-          <li class="contacts-item">
-            <a class="contacts-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link link" href="tel:+110001111111"
-              >+110001111111</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container navigation-container">
+        <nav class="navigation">
+          <a href="" class="logo link"
+            ><span class="logo-web">WEB</span
+            ><span class="logo-studio">STUDIO</span></a
+          >
+          <ul class="navigation-list list">
+            <li>
+              <a class="navigation-link link" href="./index.html"> Studio</a>
+            </li>
+            <li>
+              <a class="navigation-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li><a class="navigation-link link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="contacts list">
+            <li class="contacts-item">
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+110001111111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
-    <main class="container">
+    <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
+
       <section class="section">
-        <h2 hidden>Our strengths</h2>
-        <ul class="strengths-list list">
-          <li>
-            <h3 class="strengths-title">Strategy</h3>
-            <p class="strengths-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution
-            </p>
-          </li>
-          <li>
-            <h3 class="strengths-title">Punctuality</h3>
-            <p class="strengths-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="strengths-title">Diligence</h3>
-            <p class="strengths-text">
-              Research and confirm brands that present the strongest
-              digitalgrowth opportunities and minimixe risk
-            </p>
-          </li>
-          <li>
-            <h3 class="strengths-title">Technologies</h3>
-            <p class="strengths-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Our strengths</h2>
+          <ul class="strengths-list list">
+            <li class="strengths-strategy strengths">
+              <h3>Strategy</h3>
+              <p class="strengths-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution
+              </p>
+            </li>
+            <li class="strengths-punctuality strengths">
+              <h3 class="strengths-title">Punctuality</h3>
+              <p class="strengths-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="strengths-diligence strengths">
+              <h3 class="strengths-title">Diligence</h3>
+              <p class="strengths-text">
+                Research and confirm brands that present the strongest
+                digitalgrowth opportunities and minimixe risk
+              </p>
+            </li>
+            <li class="strengths-technologies strengths">
+              <h3 class="strengths-title">Technologies</h3>
+              <p class="strengths-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="our-work-title">What Are We Doing</h2>
-        <ul class="our-work-list list">
-          <li>
-            <img
-              src="./images/ourwork1.jpg"
-              alt="computer photo"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/ourwork2.jpg"
-              alt="Phone photo"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/ourwork3.jpg"
-              alt="Desktop
+        <div class="container">
+          <h2 class="our-work-title">What Are We Doing</h2>
+          <ul class="our-work-list list">
+            <li>
+              <img
+                src="./images/ourwork1.jpg"
+                alt="computer photo"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/ourwork2.jpg"
+                alt="Phone photo"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/ourwork3.jpg"
+                alt="Desktop
             photo"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/markguerrero.jpg"
-              alt="Photo of the employee"
-              width="264"
-              height="260"
-            />
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/markguerrero.jpg"
+                alt="Photo of the employee"
+                width="264"
+                height="260"
+              />
 
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/tomford.jpg"
-              alt="Photo of the employee"
-              width="264"
-              height="260"
-            />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/tomford.jpg"
+                alt="Photo of the employee"
+                width="264"
+                height="260"
+              />
 
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/camilagarcia.jpg"
-              alt="Photo of the employee"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/danielwilson.jpg"
-              alt="Photo of the employee"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">Ul Designer</p>
-          </li>
-        </ul>
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/camilagarcia.jpg"
+                alt="Photo of the employee"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/danielwilson.jpg"
+                alt="Photo of the employee"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-position">Ul Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class="footer container">
-      <a class="logo link" href="">
-        <span class="logo-web">WEB</span
-        ><span class="logo-studio-footer">STUDIO</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo link" href="">
+          <span class="logo-web">WEB</span
+          ><span class="logo-studio-footer">STUDIO</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions
+        </p>
+      </div>
     </footer>
   </body>
 </html>
