--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -50,7 +54,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="card-menu">
         <div class="container">
           <h1 hidden>Our Works</h1>
           <ul class="button-list list">
@@ -70,8 +74,7 @@
               <button type="button" class="button-icon">Marketing</button>
             </li>
           </ul>
-        </div>
-        <div class="container">
+
           <ul class="cards-list list">
             <li class="cards-item">
               <img
@@ -80,9 +83,10 @@
                 width="360"
                 height="300"
               />
-
-              <h3 class="cards-name">Banking App Interface Concept</h3>
-              <p class="cards-text">App</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Banking App Interface Concept</h3>
+                <p class="cards-text">App</p>
+              </div>
             </li>
             <li class="cards-item">
               <img
@@ -91,9 +95,10 @@
                 width="360"
                 height="300"
               />
-
-              <h3 class="cards-name">Cashless Payment</h3>
-              <p class="cards-text">Marketing</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Cashless Payment</h3>
+                <p class="cards-text">Marketing</p>
+              </div>
             </li>
             <li class="cards-item">
               <img
@@ -102,8 +107,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="cards-name">Mediation App</h3>
-              <p class="cards-text">App</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Mediation App</h3>
+                <p class="cards-text">App</p>
+              </div>
             </li>
             <li class="cards-item">
               <img
@@ -112,8 +119,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="cards-name">Taxi Service</h3>
-              <p class="cards-text">Marketing</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Taxi Service</h3>
+                <p class="cards-text">Marketing</p>
+              </div>
             </li>
             <li class="cards-item">
               <img
@@ -122,8 +131,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="cards-name">Screen Illustrations</h3>
-              <p class="cards-text">Desing</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Screen Illustrations</h3>
+                <p class="cards-text">Desing</p>
+              </div>
             </li>
             <li class="cards-item">
               <img
@@ -132,8 +143,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="cards-name">Online Courses</h3>
-              <p class="cards-text">Marketing</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Online Courses</h3>
+                <p class="cards-text">Marketing</p>
+              </div>
             </li>
             <li class="cards-item">
               <img
@@ -142,8 +155,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="cards-name">Instagram Stories Concept</h3>
-              <p class="cards-text">Desing</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Instagram Stories Concept</h3>
+                <p class="cards-text">Desing</p>
+              </div>
             </li>
             <li class="cards-item">
               <img
@@ -152,8 +167,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="cards-name">Orgainc Food</h3>
-              <p class="cards-text">Web Site</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Orgainc Food</h3>
+                <p class="cards-text">Web Site</p>
+              </div>
             </li>
             <li class="cards-item">
               <img
@@ -162,8 +179,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="cards-name">Fresh Coffee</h3>
-              <p class="cards-text">Web Site</p>
+              <div class="cards-description">
+                <h3 class="cards-name">Fresh Coffee</h3>
+                <p class="cards-text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
