--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <title>WebStudio</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -57,12 +61,12 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section-strengths">
         <div class="container">
           <h2 hidden>Our strengths</h2>
           <ul class="strengths-list list">
             <li class="strengths-strategy strengths">
-              <h3>Strategy</h3>
+              <h3 class="strengths-title">Strategy</h3>
               <p class="strengths-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution
@@ -92,7 +96,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="our-work">
         <div class="container">
           <h2 class="our-work-title">What Are We Doing</h2>
           <ul class="our-work-list list">
@@ -135,9 +139,10 @@
                 width="264"
                 height="260"
               />
-
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="team-mane">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -146,10 +151,12 @@
                 width="264"
                 height="260"
               />
-
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="team-mane">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
+
             <li class="team-item">
               <img
                 src="./images/camilagarcia.jpg"
@@ -157,8 +164,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-position">Marketing</p>
+              <div class="team-mane">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -167,8 +176,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-position">Ul Designer</p>
+              <div class="team-mane">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-position">Ul Designer</p>
+              </div>
             </li>
           </ul>
         </div>
