--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
         <div class="container">
           <h2 hidden>Our strengths</h2>
           <ul class="strengths-list list">
-            <li class="strengths-strategy strengths">
+            <li class="strengths">
               <h3 class="strengths-title">Strategy</h3>
               <p class="strengths-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution
               </p>
             </li>
-            <li class="strengths-punctuality strengths">
+            <li class="strengths">
               <h3 class="strengths-title">Punctuality</h3>
               <p class="strengths-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="strengths-diligence strengths">
+            <li class="strengths">
               <h3 class="strengths-title">Diligence</h3>
               <p class="strengths-text">
                 Research and confirm brands that present the strongest
                 digitalgrowth opportunities and minimixe risk
               </p>
             </li>
-            <li class="strengths-technologies strengths">
+            <li class="strengths">
               <h3 class="strengths-title">Technologies</h3>
               <p class="strengths-text">
                 Design practice focused on digital experiences. We bring forth a
