--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
           <h1 hidden>Our Works</h1>
           <ul class="button-list list">
             <li class="button-item">
-              <button type="button" class="button-icon">ALL</button>
+              <button type="button" class="button-icon">All</button>
             </li>
             <li class="button-item">
               <button type="button" class="button-icon">Web Site</button>
